--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <canvas id="canvas" width="650" height="650"></canvas>
 </body>
+<script src="math.js"></script>
 <script src="srict.js"></script>
 </html>
