--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <canvas id="canvas" width="650" height="650"></canvas>
 </body>
 <script src="math.js"></script>
+<script src="classes.js"></script>
 <script src="srict.js"></script>
 </html>
