--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" href="/favicon.png" media="(prefers-color-scheme: dark)" />
+    <link
+      rel="icon"
+      href="/faviconDark.png"
+      media="(prefers-color-scheme: light)"
+    />
+    <link rel="apple-touch-icon" href="./favicon.png" sizes="50x50" />
+    <meta
+      name="description"
+      content="Make your own functions and graphs using Graphmania."
+    />
+    <meta
+      name="keywords"
+      content="Graphmania,graphmania,Graphs,Functions,graph,function,Matěj Kotrba,Daniel Antoš"
+    />
+    <meta property="og:title" content="Graphmania" />
+    <meta
+      property="og:description"
+      content="Make your own functions and graphs using Graphmania."
+    />
+    <meta property="og:image" content="/faviconDark.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Graphmania</title>
   </head>
   <body>
     <div id="root"></div>
